--- a/projects/project-01/project-01-explore-babynames.Rmd
+++ b/projects/project-01/project-01-explore-babynames.Rmd
@@ -46,9 +46,9 @@ Let us start by importing the data from `data/names.csv.gz`. You can use the `re
 library(tidyverse)
 
 # Read the csv file `file_name_names` as data frame `tbl_names`
-file_name_names <- here::here("data/names.csv.gz")
+file_name_names <- here::here("names.csv.gz")
 tbl_names <- readr::read_csv(
-  file = ___, 
+  file = "names.csv.gz", 
   show_col_types = FALSE
 )
 
@@ -70,18 +70,18 @@ The first step is always to transform the data into a form that is easy to visua
 ```{r question-1-transform}
 tbl_names_popular = tbl_names |> 
   # Keep ROWS for year > 2010 and <= 2020
-  filter(year > ___, ___ <= ___) |> 
+  filter(year > 2010, year <= 2020) |> 
   # Group by sex and name
-  group_by(___, ___) |> 
+  group_by(sex, name) |> 
   # Summarize the number of births
   summarize(
-    nb_births = ___(nb_births),
+    nb_births = sum(nb_births),
     .groups = "drop"
   ) |> 
   # Group by sex 
-  ___(___) |>  
+  group_by(sex) |>  
   # For each sex, keep the top 5 rows by number of births
-  slice_max(___, n = ___)
+  slice_max(nb_births, n = 5)
 
 tbl_names_popular
 ```
@@ -97,18 +97,18 @@ tbl_names_popular |>
   # Reorder the names by number of births
   mutate(name = fct_reorder(name, nb_births)) |>
   # Initialize a ggplot for name vs. nb_births
-  ggplot(aes(x = ___, y = ___)) +
+  ggplot(aes(x = nb_births, y = name, fill = sex)) +
   # Add a column plot layer
   geom_col() +
   # Facet the plots by sex
-  facet_wrap(~ ___, scales = "free_y") +
+  facet_wrap(~ sex, scales = "free_y") +
   # Add labels (title, subtitle, caption, x, y)
   labs(
-    title = '___',
-    subtitle = '___',
-    caption = '___',
-    x = '___',
-    y = '___'
+    title = 'Top 5 Names vs. Number of Births by Sex',
+    subtitle = 'Emma and Noah are the most popular names of the decade (2011 to 2020)',
+    caption = 'Source: Baby Names Dataset',
+    x = 'Number of Births',
+    y = 'Name'
   ) +
   # Fix the x-axis scale 
   scale_x_continuous(
@@ -140,21 +140,21 @@ We need to transform the data into a table that consists of the columns `sex`, `
 ```{r question-2-transform}
 tbl_names_popular_trendy = tbl_names |> 
   # Group by sex and name
-  ___(___, ___) |> 
+  group_by(sex, name) |> 
   # Summarize total number of births and max births in a year
   summarize(
-    nb_births_total = ___(___),
-    nb_births_max = ___(___),
+    nb_births_total = sum(nb_births),
+    nb_births_max = max(nb_births),
     .groups = "drop"
   ) |> 
   # Filter for names with at least 10000 births
-  ___(___ > ___) |> 
+  filter(nb_births_total > 10000) |> 
   # Add a column for trendiness computed as ratio of max to total
-  ___(___ = ___ / ___) |> 
+  mutate(trendiness = nb_births_max / nb_births_total) |> 
   # Group by sex
-  ___(___) |> 
+  group_by(sex) |> 
   # Slice top 5 rows by trendiness for each group
-  ___(___, n = ___)
+  slice_max(trendiness, n = 5)
 
 tbl_names_popular_trendy
 ```
@@ -173,16 +173,17 @@ Let us write a function that will accept a name as an argument and return a plot
 plot_trends_in_name <- function(my_name) {
   tbl_names |> 
     # Filter for name = my_name
-    ___(___ == my_name) |> 
+    filter(name == my_name) |> 
     # Initialize a ggplot of `nb_births` vs. `year` colored by `sex`
-    ___(___(x = ___, y = ___, color = ___)) +
+    ggplot(aes(x = nb_births, y = year, color = sex)) +
     # Add a line layer
-    ___() +
+    geom_line() +
     # Add labels (title, x, y)
     labs(
       title = glue::glue("Babies named {my_name} across the years!"),
-      x = '___',
-      y = '___'
+      x = 'number of births',
+      y = 'year',
+      caption = 'Source: Baby Names Dataset'
     ) +
     # Update plot theme
     theme(plot.title.position = "plot")
@@ -211,9 +212,9 @@ tbl_names = tbl_names |>
   # Add NEW column first_letter by extracting `first_letter` from name using `str_sub`
   mutate(first_letter = str_sub(name, 1, 1)) |>  
   # Add NEW column last_letter by extracting `last_letter` from name using `str_sub`
-  ___(last_letter = ___(name, -1, -1)) |> 
+  mutate(last_letter = str_sub(name, -1, -1)) |> 
   # UPDATE column `last_letter` to upper case using `str_to_upper`
-  ___(last_letter = ___(___))
+  mutate(last_letter = str_to_upper(last_letter))
 
 tbl_names
 ```
@@ -223,13 +224,13 @@ Begin by computing the distribution of births across year and sex by first lette
 ```{r question-3-transform-2}
 tbl_names_by_letter = tbl_names |> 
   # Group by year, sex and first_letter
-  ___(___, ___, ___) |> 
+  group_by(year, sex, first_letter) |> 
   # Summarize total number of births, drop the grouping
-  ___(___ = ___(___), .groups = "drop") |> 
+  summarize(nb_births = sum(nb_births), .groups = "drop") |> 
   # Group by year and sex
-  ___(___, ___) |> 
+  group_by(year, sex) |> 
   # Add NEW column pct_births by dividing nb_births by sum(nb_births)
-  mutate(pct_births = ___ / sum(___))
+  mutate(pct_births = nb_births / sum(nb_births))
   
 tbl_names_by_letter
 ```
@@ -241,21 +242,19 @@ Visualize the distribution of births by first letter for the year 2020, faceted 
 ```{r question-3-visualize-1}
 tbl_names_by_letter |> 
   # Filter for the year 2020
-   
+  filter(year == 2020) |>
   # Initialize a ggplot of pct_births vs. first_letter
-  
+  ggplot(aes(y = pct_births, x = first_letter, fill = sex)) +
   # Add a column layer using `geom_col()`
-  
+  geom_col() +
   # Facet wrap plot by sex
-  
+  facet_wrap(~ sex, scales = "free_y") +
   # Add labels (title, subtitle, x, y)
-  
-  
-
-
-
-
-  
+  labs(title = "Percentage Births vs. First Letter by Sex for year 2020",
+       subtitle = "A and J are the most common initials for first name",
+      y = 'Percentage of Births',
+      x = 'First Letter of Name',
+      caption = 'Source: Baby Names Dataset') +
   # Fix scales of y axis
   scale_y_continuous(
     expand = c(0, 0),
@@ -277,16 +276,15 @@ plot_trends_in_letter <- function(my_letter) {
     # Filter for first_letter = my_letter
     filter(first_letter == my_letter) |> 
     # Initialize a ggplot of pct_births vs. year colored by sex
-    
+    ggplot(aes(x = year, y = pct_births, color = sex)) +
     # Add a line layer
-    
+    geom_line() +
     # Add labels (title, subtitle, caption, x, y)
     labs(
       title = glue::glue("Trends in Names beginning with {my_letter}"),
-      subtitle = "___",
-      caption = "___",
-      x = "___",
-      y = '___'
+      caption = "Source: Baby Names Dataset",
+      x = "Year",
+      y = 'Percentage of Births'
     ) +
     # Update y-axis scales to display percentages
     scale_y_continuous(labels = scales::percent_format()) +
@@ -297,11 +295,6 @@ plot_trends_in_letter <- function(my_letter) {
 plot_trends_in_letter("S")
 ```
 
-----
-[BONUS] 
-
-How do these plots change when you focus on the `last_letter` instead of the `first_letter`. Feel free to go back and change `first_letter` to 
-`last_letter` and see what you find. Try to make an educated guess before you run the code, so you can see if your intuition matches up!
 ----
 
 ### Question 4: [Unveiling Letter Combinations] What secrets do the most popular letter combinations hold?
@@ -315,20 +308,17 @@ Are you ready to explore the fascinating realm of letter combinations in names? 
 ```{r question-4-transform}
 tbl_names_by_first_and_last_letter = tbl_names |> 
   # Filter for sex = "F"
-  
+  filter(sex == 'F') |>
   # Group by `first_letter`, `last_letter`, and `year`
-  
+  group_by(first_letter, last_letter, year) |>
   # Summarize total number of births
-  
-  
-  
-  
+  summarize(nb_births = sum(nb_births)) |>
   # Group by `year`
-  
+  group_by(year) |>
   # Add NEW column pct_births by dividing nb_births by sum(nb_births)
-
+  mutate(pct_births = nb_births/sum(nb_births)) |>
   # Ungroup data
-
+  ungroup()
 
 tbl_names_by_first_and_last_letter
 ```
@@ -341,19 +331,20 @@ Now, you will visualize the distribution of `pct_births` by `last_letter` and `f
 ```{r question-4-visualize}
 tbl_names_by_first_and_last_letter |> 
   # Filter for the year 2021
-  
+  filter(year == 2021) |>
   # Initialize a ggplot of last_letter vs. first_letter
-  
+  ggplot(aes(y = last_letter,x= first_letter)) +
   # Add a `geom_tile` layer with fill mapped to pct_births
-  
+  geom_tile(aes(fill = pct_births)) +
   # Add labels (title, subtitle, x, y, fill)
- 
-  
-  
-  
-
-
-
+  labs(
+     title = "Percentage of births by first letter and last letter",
+   subtitle = "Year = 2021",
+   caption = "Source: Baby Names Dataset",
+   fill = "% of Births",
+   x = "First Letter",
+   y = "Last Letter"
+  ) +
   # Update fill scale to use Viridis colors
   scale_fill_viridis_b(direction = -1) +
   # Update plotting theme
@@ -382,24 +373,21 @@ get_letter_type <- function(letter) {
 
 tbl_names_vowel_consonant <- tbl_names |> 
   # Add NEW column named `first_letter_type`
-  
+  mutate(first_letter_type = get_letter_type(first_letter)) |>
   # Add NEW column named `last_letter_type`
-  
+  mutate(last_letter_type = get_letter_type(last_letter)) |>
   # Group by `sex`, `year`, `first_letter_type` and `last_letter_type`
-  
+  group_by(sex, year, first_letter_type, last_letter_type) |>
   # Summarize the total number of births
-  
-  
-  
-  
+  summarize(nb_births = sum(nb_births)) |>
   # Group by `sex` and` `year`
-  
+  group_by(sex, year) |>
   # Add NEW column with `pct_births` calculated as `nb_births / sum(nb_births)`
-   
+  mutate(pct_births = nb_births/sum(nb_births)) |> 
   # Ungroup the data
-  
+  ungroup() |>
   # Unite `first_letter_type` and `last_letter_type` into a NEW column named `first_last`
- 
+  unite("first_last",first_letter_type,last_letter_type)
 
 tbl_names_vowel_consonant
 ```
@@ -413,20 +401,19 @@ tbl_names_vowel_consonant |>
   # Reorder `first_last` by the median `pct_births`
   mutate(first_last = fct_reorder(first_last, pct_births, median)) |>
   # Initialize a ggplot of `pct_births` vs. `year`
-  
+  ggplot(aes(x = year, y = pct_births)) +
   # Add an area layer with fill = first_last
-  
+  geom_area(aes(fill = first_last)) +
   # Facet wrap plot by `sex`
-  
+  facet_wrap(~ sex) +
   # Add labels (title, subtitle, caption, x, y)
-  
-  
-  
-  
-
-
-
-
+  labs(
+   title = "Trends in the usage of vowels and consonants in names",
+    subtitle = "% of births by combination of first & last letter types",
+    caption = "Source: Baby Names dataset",
+    x = "Year",
+    y = "% of Births"
+  ) +
   # Clean up x and y axis scales
   scale_x_continuous(
     expand = c(0, 0)
