--- a/projects/project-01/project-01-explore-babynames.Rmd
+++ b/projects/project-01/project-01-explore-babynames.Rmd
@@ -6,7 +6,7 @@ output: github_document
 ```{r setup, message = FALSE, include = FALSE}
 knitr::opts_chunk$set(
   echo = TRUE,
-  error = TRUE,
+  eval = TRUE,
   comment = "#>",
   fig.path = "img/",
   fig.retina = 2,
