--- a/projects/project-01/project-01-explore-babynames.Rmd
+++ b/projects/project-01/project-01-explore-babynames.Rmd
@@ -8,7 +8,7 @@ knitr::opts_chunk$set(
   echo = TRUE,
   eval = TRUE,
   comment = "#>",
-  fig.path = "img/",
+  fig.path = "images/",
   fig.retina = 2,
   fig.width = 6,
   fig.asp = 9/16,
