--- a/projects/project-02/project-02-estimate-age-from-name.Rmd
+++ b/projects/project-02/project-02-estimate-age-from-name.Rmd
@@ -275,9 +275,9 @@ plot_estimated_age <- function(tbl, my_name, my_sex) {
     # Initialize a ggplot with x = year
     ggplot(aes(x = year)) +
     # Add a column layer with y = nb_alive, and appropriate colors
-    geom_col(aes(y = nb_alive, color = 'white')) +
+    geom_col(aes(y = nb_alive), color = 'blue') +
     # Add a line layer with y = nb_births, and appropriate colors
-    geom_line(aes(y = nb_births, color = 'black')) +
+    geom_line(aes(y = nb_births), color = 'black') +
     # Add a vertical line for the median age
     geom_vline(
       aes(xintercept = 2022 - age_median), 
